Bug 48680 - [r300g] Some piglit tests fails with "radeon_vert_fc.c:175: lower_if: Assertion `fc_state->LoopDepth == 0' failed"
Summary: [r300g] Some piglit tests fails with "radeon_vert_fc.c:175: lower_if: Asserti...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r300 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Tom Stellard
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-14 02:57 UTC by Pavel Ondračka
Modified: 2012-04-14 09:26 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Pavel Ondračka 2012-04-14 02:57:34 UTC
glsl-vs-unroll-explosion, glsl-vs-vec4-indexing-temp-dst-in-nested-loop-combined and glsl-vs-vec4-indexing-temp-src-in-nested-loop-combined used to fail with 

    r300 VP: Compiler error:
    Too many temporaries.
    Using a dummy shader instead.

Now they assert instead with radeon_vert_fc.c:175: lower_if: Assertion `fc_state->LoopDepth == 0' failed.

The assert was added in b2df031a959f36743527b9abc89913ce4f895de3.

Don't know if this is a expected behavior, feel free to close if invalid, it just looked me that from user perspective, compiling a dummy shader and going on as if nothing happened is better.

Nevertheless this is purely academical, as I haven't reproduced this yet with any real app outside if piglit.
Comment 1 Tom Stellard 2012-04-14 09:15:56 UTC
This is a bug. We should still be reporting that we have run out of temporaries.

Fixed in git commit 0b59909e78e96f1bd95d63050e988492b40b03ee
Comment 2 Pavel Ondračka 2012-04-14 09:26:06 UTC
That was really fast, thank you.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.