r300/compiler: Exit immediately from rc_vert_fc() if there is an error

This way we correctly report "Too many temporaries" errors.

https://bugs.freedesktop.org/show_bug.cgi?id=48680

Note: This is a candidate for the stable branches.